@@ -55,6 +55,10 @@ set(SOURCES
 
     values_ui/panel/panel.cc
     values_ui/panel/panel.h
+    values_ui/cable_in/cable_in.cc
+    values_ui/cable_in/cable_in.h
+    values_ui/cable_out/cable_out.cc
+    values_ui/cable_out/cable_out.h
 
     values.cc
 )
